@@ -1,3 +1,9 @@
+2008-07-10 Alasdair Allan <aa@astro.ex.ac.uk>
+
+	* eSTAR/Broker/Handler.pm & bin/event_broker.pl: Caught rogue
+	  <Transport role="utility"> messages (originating from VO-GCN)
+	  before they could do much harm.
+
 2008-07-09 Alasdair Allan <aa@astro.ex.ac.uk>
 
 	* eSTAR/Broker/Handler.pm: Bug fix for GCN broken messages
